Tue Mar  1 16:42:41 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: found out the bug blocking unmounting 
	  of temporary media filesystems in 0.0.24, it wasn't dnotify.

Wed Feb 23 23:28:18 CET 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in: small patch about debugging being always enabled
	  by Martin Schlemmer

Wed Feb 23 17:44:54 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: try to avoid the /media/ mount problem
	  in 0.0.24

Fri Feb 18 15:25:23 CET 2005 Daniel Veillard <veillard@redhat.com>

	* NEWS configure.in gamin.spec.in doc/gamin.html doc/news.html:
	  updated and preparing release of 0.0.24

Fri Feb 18 14:36:38 CET 2005 Daniel Veillard <veillard@redhat.com>

	* python/tests/Makefile.am python/tests/dnotify[67].py: added
	  more complex dnotify tests

Fri Feb 18 12:59:16 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_poll.c: more cleanup, bug fix on monitoring
	  missing files.
	* python/tests/Makefile.am python/tests/dnotify5.py: added
	  a specific test.
	  
Thu Feb 17 17:15:31 CET 2005 Daniel Veillard <veillard@redhat.com>

	* server/gam_dnotify.c server/gam_poll.c: removing bugs,
	  did I say that I hate DNotify ?
	* python/tests/Makefile.am python/tests/dnotify*.py: more
	  tests and fixes

Thu Feb 17 12:46:06 CET 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in libgamin/gam_api.c libgamin/gam_data.c
	  libgamin/gam_protocol.h libgamin/gamin_sym.version
	  server/gam_debugging.[ch] server/Makefile.am: adding a
	  debugging infrastructure where some server internal events
	  can be reported to the client. This is only compiled if 
	  configured with --enable-debug-api, cleaned bup some configure.in
	  bugs
	* server/gam_dnotify.c: plugged DNotify in the debugging framework
	* python/gamin.c python/gamin.py: added python support for the
	  debugging framework
	* python/tests/Makefile.am python/tests/dnotify.py 